--- a/src/smile/public/less/app.less
+++ b/src/smile/public/less/app.less
@@ -2,3 +2,14 @@
   margin: 0px;
   padding: 0px;
 }
+
+.chat-container {
+  position: absolute;
+  top: 30px;
+  bottom: 50px;
+  width: 100%;
+  overflow-y: auto;
+}
+
+.message-list {
+}
