--- a/src/smile/public/less/app.less
+++ b/src/smile/public/less/app.less
@@ -3,7 +3,9 @@
   padding: 0px;
 }
 
-.chat-container {
+.blog-container,
+.chat-container,
+.information-container {
   position: absolute;
   top: 30px;
   bottom: 50px;
