--- a/src/smile/public/less/app.less
+++ b/src/smile/public/less/app.less
@@ -1,6 +1,34 @@
+@mainColor: #0B9CD1;
+
 * {
   margin: 0px;
   padding: 0px;
+}
+
+.nav-tab {
+  background-color: #fff;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 50px;
+  border-top: 1px solid #ddd;
+
+  li {
+    display: inline-block;
+    width: 20%;
+    height: 100%;
+
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      &.active {
+        background-color: @mainColor;
+        color: white;
+      }
+    }
+  }
 }
 
 .blog-container,
@@ -14,4 +42,86 @@
 }
 
 .message-list {
+}
+
+.blog-container {
+  .categories {
+    @height: 50px;
+
+    display: block;
+    width: 100%;
+    height: @height;
+    margin: 20px 0;
+
+    li {
+      box-sizing: border-box;
+      display: inline-block;
+      width: 200px;
+      height: 100%;
+      border: 3px solid @mainColor;
+      margin: 0 20px;
+      border-radius: @height/2;
+
+      a {
+        display: block;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        vertical-align: 100%;
+        line-height: @height;
+        text-decoration: none;
+        color: @mainColor;
+        border-radius: @height/2;
+      }
+
+      &.active a {
+        background-color: @mainColor;
+        color: white;
+      }
+    }
+  }
+  .article-list {
+    li {
+      display: block;
+      width: 100%;
+      height: 80px;
+      border-bottom: 1px solid #ccc;
+
+      &:first-child {
+        border-top: 1px solid #ccc;
+      }
+
+      a {
+        text-decoration: none;
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        height: 100%;
+        padding: 5px 20px 5px 20px;
+
+        .author {
+          display: block;
+          padding: 5px;
+          color: @mainColor;
+        }
+
+        .title {
+          display: block;
+          padding: 5px;
+          color: black;
+          font-size: 22px;
+        }
+      }
+    }
+  }
+
+  .btn-new-article {
+    display: block;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+    background: red;
+  }
 }
