--- a/src/smile/public/less/app.less
+++ b/src/smile/public/less/app.less
@@ -56,9 +56,11 @@
     @height: 30px;
 
     display: block;
-    width: 100%;
+    // width: calc(100% - 40px);
     height: @height;
-    margin: 20px 0;
+    // margin: 20px 0px 20px 20px;
+    margin: 20px 20px;
+    box-sizing: border-box;
 
     li {
       box-sizing: border-box;
