--- a/src/smile/public/less/app.less
+++ b/src/smile/public/less/app.less
@@ -105,10 +105,10 @@
     li {
       display: block;
       width: 100%;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 2px solid #eee;
 
       &:first-child {
-        border-top: 1px solid #ccc;
+        border-top: 2px solid #eee;
       }
 
       a {
