--- a/src/smile/public/less/app.less
+++ b/src/smile/public/less/app.less
@@ -225,3 +225,42 @@
     font-size: 20px;
   }
 }
+
+.information-container {
+  .information-list {
+    li {
+      display: block;
+      width: 100%;
+      border-bottom: 2px solid #eee;
+
+      &:first-child {
+        border-top: 2px solid #eee;
+      }
+
+      a {
+        text-decoration: none;
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        height: 100%;
+        padding: 5px 20px 5px 20px;
+
+        .title {
+          display: block;
+          color: black;
+          font-weight: bold;
+          font-size: 22px;
+          padding: 10px 0;
+        }
+
+        .content {
+          display: block;
+          color: black;
+          font-size: 18px;
+          line-height: 28px;
+          padding: 5px 0;
+        }
+      }
+    }
+  }
+}
