--- a/src/smile/public/less/app.less
+++ b/src/smile/public/less/app.less
@@ -61,6 +61,32 @@
 }
 
 .blog-container {
+  &>.title {
+    font-size: 22px;
+    padding: 25px 0 15px 0;
+    margin: 0 20px;
+  }
+
+  &>.author {
+    // position: absolute;
+    // right: 40px;
+    // width: 100%;
+    margin: 10px 20px;
+
+    display: block;
+    text-align: right;
+    &:before {
+      content: '- '
+    }
+  }
+
+  &>.content {
+    font-size: 18px;
+    line-height: 28px;
+    padding: 15px 20px;
+    border-top: 1px solid #ddd;
+  }
+
   .categories {
     @height: 30px;
 
@@ -227,6 +253,19 @@
 }
 
 .information-container {
+  &>.title {
+    font-size: 22px;
+    padding: 25px 0;
+    margin: 0 20px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  &>.content {
+    font-size: 18px;
+    line-height: 28px;
+    padding: 15px 20px;
+  }
+
   .information-list {
     li {
       display: block;
